--- a/env.yaml
+++ b/env.yaml
@@ -13,14 +13,13 @@ dependencies:
   - astor=0.8.1=py39h06a4308_0
   - astunparse=1.6.3=py_0
   - async-timeout=4.0.1=pyhd3eb1b0_0
-  - attrs=21.2.0=pyhd3eb1b0_0
   - blas=1.0=mkl
   - blinker=1.4=py39h06a4308_0
   - brotlipy=0.7.0=py39h27cfd23_1003
   - c-ares=1.17.1=h27cfd23_0
-  - ca-certificates=2023.7.22=hbcca054_0
+  - ca-certificates=2023.05.30=h06a4308_0
   - cachetools=4.2.2=pyhd3eb1b0_0
-  - certifi=2023.7.22=pyhd8ed1ab_0
+  - certifi=2023.7.22=py39h06a4308_0
   - cffi=1.14.6=py39h400218f_0
   - charset-normalizer=2.0.4=pyhd3eb1b0_0
   - click=8.0.3=pyhd3eb1b0_0
@@ -77,16 +76,14 @@ dependencies:
   - mkl_random=1.2.2=py39h51133e4_0
   - multidict=5.1.0=py39h27cfd23_2
   - ncurses=6.3=h7f8727e_2
-  - numpy=1.21.2=py39h20f2e39_0
-  - numpy-base=1.21.2=py39h79a1101_0
   - oauthlib=3.1.1=pyhd3eb1b0_0
-  - openssl=1.1.1l=h7f98852_0
+  - openssl=1.1.1v=h7f8727e_0
   - opt_einsum=3.3.0=pyhd3eb1b0_1
   - packaging=23.1=pyhd8ed1ab_0
   - pandas=1.3.5=py39hde0f152_0
   - patsy=0.5.3=pyhd8ed1ab_0
   - pillow=9.4.0=py39h6a678d5_0
-  - pip=23.2.1=pyhd8ed1ab_0
+  - pip=23.2.1=py39h06a4308_0
   - pyasn1=0.4.8=pyhd3eb1b0_0
   - pyasn1-modules=0.2.8=py_0
   - pycparser=2.21=pyhd3eb1b0_0
@@ -100,7 +97,6 @@ dependencies:
   - python_abi=3.9=2_cp39
   - pytz=2023.3=pyhd8ed1ab_0
   - readline=8.1=h27cfd23_0
-  - requests=2.26.0=pyhd3eb1b0_0
   - requests-oauthlib=1.3.0=py_0
   - rsa=4.7.2=pyhd3eb1b0_1
   - scipy=1.7.1=py39h292c36d_2
@@ -121,10 +117,7 @@ dependencies:
   - tk=8.6.12=h1ccaba5_0
   - tornado=6.1=py39hb9d737c_3
   - tqdm=4.66.1=pyhd8ed1ab_0
-  - typing-extensions=3.10.0.2=hd3eb1b0_0
-  - typing_extensions=3.10.0.2=pyh06a4308_0
   - tzdata=2021e=hda174b7_0
-  - urllib3=1.26.7=pyhd3eb1b0_0
   - werkzeug=2.0.2=pyhd3eb1b0_0
   - wheel=0.35.1=pyhd3eb1b0_0
   - wrapt=1.12.1=py39he8ac12f_1
@@ -134,16 +127,50 @@ dependencies:
   - zlib=1.2.13=h5eee18b_0
   - zstd=1.5.5=hc292b87_0
   - pip:
+    - altair==4.2.2
     - array-record==0.4.1
+    - attrs==23.1.0
     - dm-tree==0.1.8
+    - entrypoints==0.4
     - etils==1.4.1
+    - fastdup==1.36
+    - gitdb==4.0.10
+    - gitpython==3.1.32
     - googleapis-common-protos==1.60.0
     - importlib-resources==6.0.1
+    - jinja2==3.1.2
+    - jsonschema==4.19.0
+    - jsonschema-specifications==2023.7.1
+    - markdown-it-py==3.0.0
+    - markupsafe==2.1.3
+    - mdurl==0.1.2
+    - numpy==1.23.0
+    - opencv-python-headless==4.8.0.76
+    - pillow-heif==0.13.0
     - promise==2.3
     - protobuf==3.20.3
     - psutil==5.9.5
+    - pyarrow==13.0.0
+    - pydeck==0.8.1b0
+    - pygments==2.16.1
+    - pympler==1.0.1
+    - pyyaml==6.0.1
+    - referencing==0.30.2
+    - requests==2.28.1
+    - rich==13.5.2
+    - rpds-py==0.9.2
+    - semver==3.0.1
+    - sentry-sdk==1.29.2
+    - smmap==5.0.0
+    - streamlit==1.12.0
     - tensorflow-datasets==4.9.2
     - tensorflow-hub==0.14.0
     - tensorflow-metadata==1.14.0
     - toml==0.10.2
-prefix: /home/bryan/anaconda3/envs/tensorflow
+    - toolz==0.12.0
+    - typing-extensions==4.7.1
+    - tzlocal==5.0.1
+    - urllib3==1.26.16
+    - validators==0.21.2
+    - watchdog==3.0.0
+prefix: /home/edu/anaconda3/envs/tensorflow
