--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,13 +15,10 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: '3.9'
-    - name: Add conda to system path
-      run: |
-        # $CONDA is an environment variable pointing to the root of the miniconda directory
-        echo $CONDA/bin >> $GITHUB_PATH
+    
     - name: Install dependencies
       run: |
-        conda env update --file env.yaml --name base
+        pip install -r requirements.txt
     - name: Lint with flake8
       run: |
         conda install flake8
